--- a/development/Jenkinsfile
+++ b/development/Jenkinsfile
@@ -5,7 +5,7 @@ node {
 
  
   stage('GIT CheckOut') {
-    git branch: 'development ', url: 'https://github.com/Kiba87/mindtree-course-test.git'
+    git branch: 'Code-Development ', url: 'https://github.com/Kiba87/mindtree-course-test.git'
   }
 
   def project_path = "petclinic-code"
